k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: route-optimizer
  labels:
    name: route-optimizer
